kubernetes/mongo.yml
---
  apiVersion: apps/v1
  kind: Deployment
  metadata:
    name: mongodb-deployment
  spec:
    replicas: 1
    selector:
      matchLabels:
        app: mongo
    template:
      metadata:
        labels:
          app: mongo
      spec:
        containers:
          - name: mongo
            image: mongo:latest
            ports:
              - containerPort: 27017

---
  apiVersion: v1
  kind: Service
  metadata:
    name: mongodb-service
  spec:
    ports:
    - port: 27017
      targetPort: 27017
    selector:
      app: mongo
    type: ClusterIP
