kubernetes/server.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: koa-vue-fullstack-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: koa-vue-fullstack-server
  template:
    metadata:
      labels:
        app: koa-vue-fullstack-server
    spec:
      containers:
        - name: koa-vue-fullstack-server
          image: yunhan0/koa-vue-fullstack:server
          ports:
            - containerPort: 3000

---
  apiVersion: v1
  kind: Service
  metadata:
    name: koa-vue-fullstack-server
  spec:
    ports:
    - port: 3001
      protocol: TCP
      targetPort: 3000
    selector:
      app: koa-vue-fullstack-server
    type: ClusterIP
