kubernetes/ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: koa-vue-fullstack-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
  - hosts:
    - k8s.yunhan.li
    secretName: koa-vue-fullstack-stack-secrets
  rules:
  - host: k8s.yunhan.li
    http:
      paths:
      - path: /
        backend:
          serviceName: koa-vue-fullstack-server
          servicePort: 3001
